force-app/main/default/objects/Recebimento_de_compra__c/Recebimento_de_compra__c.object-meta.xml
<CustomObject>
    <label>Recebimento de compra</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Nº</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recebimentos de compras</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>