force-app/main/default/objects/Recebimento_de_compra__c/fields/Data_do_recebimento__c.field-meta.xml
<CustomField>
    <fullName>Data_do_recebimento__c</fullName>
    <label>Data do recebimento</label>
    <type>Date</type>
</CustomField>