force-app/main/default/objects/Recebimento_de_compra__c/fields/Destinacao_do_item__c.field-meta.xml
<CustomField>
    <fullName>Destinacao_do_item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destinação do item</label>
    <referenceTo>Requisicao_de_item__c</referenceTo>
    <relationshipLabel>Recebimentos de compras</relationshipLabel>
    <relationshipName>Recebimentos_de_compras</relationshipName>
    <type>Lookup</type>
</CustomField>