force-app/main/default/objects/Recebimento_de_compra__c/fields/Item_de_pedido_de_compra__c.field-meta.xml
<CustomField>
    <fullName>Item_de_pedido_de_compra__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item de pedido de compra</label>
    <referenceTo>Item_de_fornecedor__c</referenceTo>
    <relationshipLabel>Recebimentos de compras</relationshipLabel>
    <relationshipName>Recebimentos_de_compras</relationshipName>
    <type>Lookup</type>
</CustomField>