force-app/main/default/objects/Recebimento_de_compra__c/fields/Quantidade_recebida__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_recebida__c</fullName>
    <label>Quantidade recebida</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>