force-app/main/default/objects/Recebimento_de_compra__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <formula>IF(Destinacao_do_item__c != null, &apos;Recebimento de compra destinada a venda&apos;, &apos;Recebimento de compra para estoque&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo</label>
    <type>Text</type>
</CustomField>